Fix side menu alignment on projects page

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,8 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+h1 {
+    text-shadow: 0px 0px 5px white;
+    font-weight: 200;
+}
