--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -1,11 +1,6 @@
-.aboutContent {
-    height: 100vh;
+.main {
+    min-height: 100vh;
     padding: 6vh 7.5vw;
-}
-
-h1 {
-    text-shadow: 0px 0px 5px white;
-    font-weight: 200;
 }
 
 #aboutText {
