--- a/src/pages/Projects.module.css
+++ b/src/pages/Projects.module.css
@@ -1,12 +1,20 @@
-h1 {
-    font-size: 35px;
-    text-shadow: 0px 0px 5px white;
-    font-weight: 200;
+.main {
+    min-height: 100vh;
+    padding: 6vh 7.5vw;
+}
+
+.projectsContent {
+    min-height: 100vh;
+    padding: 6vh 7.5vw;
 }
 
 #constructionMessage {
+    display: none;
+}
+
+.projectList {
+    margin: 40px 30px;
     display: block;
-    text-indent: 30px;
 }
 
 .project {
@@ -24,32 +32,14 @@ h1 {
     margin-bottom: 10px;
 }
 
-@media only screen and (min-width: 150px) {
-    .projectsContent {
-        margin: auto 8.2vw;
-    }
-
-    .projectList {
-        display: none;
-    }
-
+@media (max-width: 768px) {
     #constructionMessage {
+        display: block;
+        text-indent: 30px;
         font-size: 18px;
     }
-}
-
-@media only screen and (min-width: 1050px) {
-    .projectsContent {
-        margin: 60px 7.5vw 0px;
-        height: 95vh;
-    }
 
     .projectList {
-        margin: 40px 30px;
-        display: block;
-    }
-
-    #constructionMessage {
         display: none;
     }
 }
